--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@mui/material": "^6.1.6",
     "@prisma/client": "^5.22.0",
     "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
     "next": "14.2.5",
     "next-auth": "^4.24.10",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "uuidv4": "^6.2.13",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
