--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.6",
     "@prisma/client": "^5.22.0",
+    "@types/ua-parser-js": "^0.7.39",
+    "@vercel/edge": "^1.1.2",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "next": "14.2.5",
@@ -22,6 +24,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "recharts": "^2.13.3",
+    "ua-parser-js": "^1.0.39",
     "uuidv4": "^6.2.13",
     "yup": "^1.4.0"
   },
