--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vercel/edge": "^1.1.2",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "lucide-react": "^0.469.0",
     "next": "14.2.5",
     "next-auth": "^4.24.10",
     "qrcode": "^1.5.4",
